--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "framer-motion": "^11.0.3",
+    "leaflet": "^1.9.4",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
